--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.2.1
 aniso8601==8.0.0
 api==0.0.7
+astroid==2.3.3
 Babel==2.7.0
 bcrypt==3.1.7
 blinker==1.4
@@ -8,10 +9,13 @@ certifi==2019.9.11
 cffi==1.13.1
 chardet==3.0.4
 Click==7.0
+colorama==0.4.1
+cryptography==2.8
 Flask==1.1.1
 Flask-API==1.1
 Flask-BabelEx==0.9.3
 Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.8
 Flask-JWT-Extended==3.24.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
@@ -24,12 +28,15 @@ Flask-Security==3.0.0
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
 idna==2.8
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
+lazy-object-proxy==1.4.3
 Mako==1.1.0
 MarkupSafe==1.1.1
 marshmallow==3.2.1
 marshmallow-sqlalchemy==0.19.0
+mccabe==0.6.1
 nose==1.3.7
 passlib==1.7.1
 postgres==3.0.0
@@ -38,6 +45,8 @@ psycopg2-binary==2.8.4
 psycopg2-pool==1.1
 pycparser==2.19
 PyJWT==1.7.1
+pylint==2.4.4
+pyOpenSSL==19.0.0
 python-dateutil==2.8.0
 python-editor==1.0.4
 pytz==2019.3
@@ -46,6 +55,8 @@ six==1.12.0
 speaklater==1.3
 SQLAlchemy==1.3.10
 SQLAlchemy-Utils==0.34.2
+typed-ast==1.4.0
 urllib3==1.25.6
 Werkzeug==0.16.0
+wrapt==1.11.2
 WTForms==2.2.1
